graph fit equation added

--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -165,6 +165,13 @@
       </figure>
       <!-- #endregion hanging-mass-acceleration-graph -->
 
+      <p class="indent">
+        The prior figure plots the average acceleration of the cart ($a_{avg}$) versus the hanging mass ($m_h$).
+        In accord with equation 2, the plot was given a linear fit.
+        The resulting equation was
+        $a_{avg} = (0.02523 \pm 0.00006 \units{\dfrac{m}{s^2 g}}) m_h + (0.0010 \pm 0.0009 \units{\dfrac{m}{s^2}})$.
+      </p>
+
     </section>
 
     <section id="conclusion">
