figure description edited

--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -171,8 +171,8 @@
         The resulting equation was
         $a_{avg} = (0.02523 \pm 0.00006 \units{\dfrac{m}{s^2 g}}) m_h + (0.0010 \pm 0.0009 \units{\dfrac{m}{s^2}})$.
         For future reference, let $s_e$ refer to the experimentally determined slope ($0.02523 \pm 0.00006 \units{\dfrac{m}{s^2 g}}$).
-        Equation 2 suggest that the theoretical slope ($s_t$) should be $\dfrac{g}{m_{sys}}$, where the system mass ($m_{sys} = M_c + m_h$) was measured to be $380.6 \pm 0.2 \units{g}$
-        Thus, the theoretical slope is $0.025775 \pm 0.000013 \units{\dfrac{m}{s^2 g}}$.
+        Equation 2 suggest that the theoretical slope ($s_t$) should be $g/m_{sys}$.
+        Performing the necessary calculation, the theoretical slope is found to be $0.025775 \pm 0.000013 \units{\dfrac{m}{s^2 g}}$.
       </p>
 
     </section>
