--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -157,6 +157,12 @@
         </tbody>
       </table>
       <!-- #endregion hanging-mass-acceleration-table -->
+      <p class="indent">
+        The prior table contains the data gathered in the five trials of the experiment.
+        It contains the hanging mass ($m_h$), the acceleration when the hanger was moving up ($a_{up}$), the acceleration when the hanger was moving down ($a_{down}$), and the average of $a_{up}$ and $a_{down}$ ($a_{avg}$).
+        Note that for each trial the system mass ($m_{sys} = M_c + m_h$), was kept constant.
+        The system mass was measured to be $380.6 \pm 0.2 \units{g}$ (uncertainty due to read error, ± half the smallest digit, and calibration error, 0.05% of the measured value).
+      </p>
 
       <!-- #region hanging-mass-acceleration-graph -->
       <figure>
