--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -174,11 +174,11 @@
       <p class="indent">
         The prior figure plots the average acceleration of the cart ($a_{avg}$) versus the hanging mass ($m_h$).
         In accord with equation 2, the plot was given a linear fit.
-        The resulting equation was
-        $a_{avg} = (0.02523 \pm 0.00006 \units{\dfrac{m}{s^2 g}}) m_h + (0.0010 \pm 0.0009 \units{\dfrac{m}{s^2}})$.
-        For future reference, let $s_e$ refer to the experimentally determined slope ($0.02523 \pm 0.00006 \units{\dfrac{m}{s^2 g}}$).
+        The resulting equation was as follows.
+        $$a_{avg} = (0.02523 \pm 0.00006 \units{\dfrac{m}{s^2 g}}) m_h + (0.0010 \pm 0.0009 \units{\dfrac{m}{s^2}}) \tag{6}$$
+        For future reference, let $s_e$ refer to the experimentally determined slope in equation 6.
         Equation 2 suggest that the theoretical slope ($s_t$) should be $g/m_{sys}$.
-        Performing the necessary calculation, the theoretical slope is found to be $0.025775 \pm 0.000013 \units{\dfrac{m}{s^2 g}}$.
+        Performing the necessary calculation, the theoretical slope is found to be $0.025775 \pm 0.000013 \units{{m}/(s^2 g)}$.
       </p>
 
     </section>
