extra comma removed

--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -161,7 +161,7 @@
       <p class="indent">
         The prior table contains the data gathered in the five trials of the experiment.
         It contains the hanging mass ($m_h$), the acceleration when the hanger was moving up ($a_{up}$), the acceleration when the hanger was moving down ($a_{down}$), and the average of $a_{up}$ and $a_{down}$ ($a_{avg}$).
-        Note that for each trial the system mass, was kept constant.
+        Note that for each trial the system mass was kept constant.
         The uncertainty of the system mass ($m_{sys}$) was approximated to be due to read error (± half the smallest digit) and calibration error (± 0.05% of the measured value).
       </p>
 
