--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -217,7 +217,26 @@
     <section id="conclusion">
       <h2>Conclusion</h2>
       <p class="indent">
-        
+        In this experiment, a cart was placed on a track with a string attached to it over a pulley with a hanging mass at the end.
+        The acceleration was measured as the hanging mass was varied, but with the system mass held constant. 
+        By averaging the acceleration as the hanger moved up and the acceleration as the hanger moved down, the effects of frictional force and air resistance were canceled and made negligible, thereby allowing average acceleration to be used in place of the theoretical, no friction, acceleration.
+        If the results were in agreement with Newton's second law of motion, then the experimental graph of $a_{avg}$ versus $m_h$ (see Figure 2, essentially a graph of acceleration versus net force with the horizontal axis scaled by a factor of $1/g$) would show a proportional relationship with a slope consistent with the one predicted by applying Newton's laws (see equation 2).
+      </p>
+      <p class="indent">
+        The graph of acceleration versus hanging mass (Figure 2) turned out to be well described by a linear/proportional fit, which is consistent with the predictions.
+        But, while the difference ($D$, see Table 2) between the theoretical and experimental slopes turned out to be quite low, its uncertainty range did not include zero.
+        In other words, the theoretical and experimental slopes did not agree with each other at this level of precision. 
+        Thus, it is likely that factors initially assumed to be negligible were actually at play.
+        One potential source of error comes from the assumption that the track was properly leveled before starting to gather data.
+        When the experiment was carried out, the track was figured to be level just based on visual inspection.
+        It is possible that the track was slightly angled, in particular with the side of the pulley slightly higher than the opposite side.
+        This would have caused a component of the cart's weight to run parallel to the track and opposite tension in the string, thereby impeding the cart's acceleration and lowering the measured acceleration compared to the theoretical.
+        If the lab were to be repeated, a spirit level might be used when setting up the track to make sure it is level before beginning data collection.
+        Another potential source of error comes from the assumption that the pulley had negligible mass.
+        The pulley obviously had some mass which would have contributed to the inertia of the system, thereby reducing the measured acceleration of the cart compared to the theoretical acceleration (which assumed a massless pulley).
+        If the lab were to be repeated, a pulley with a smaller mass and smaller radius might be used, as such adjustments would reduce the pulley's moment of inertia.
+        Another option might be to use a pulley with a known (or otherwise findable/calculable) moment of inertia.
+        This would be factored into the adjusted theoretical calculations, which would need to incorporate some of the tools of rotational dynamics to account for the inertia of the pulley.
       </p>
     </section>
   </main>
