it made less ambiguous

--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -176,7 +176,7 @@
         The prior figure plots the average acceleration of the cart ($a_{avg}$) versus the hanging mass ($m_h$).
         In accord with equation 2, the plot was given a linear fit.
         The resulting equation is shown below, with uncertainty taken to be the standard error of the fit parameters.
-        Since the vertical intercept is very low, it can be assumed that it also matches the proportional relationship given by equation 2.
+        Since the vertical intercept is very low, it can be assumed that the graph also matches the proportional relationship given by equation 2.
         $$a_{avg} = (0.02523 \pm 0.00006 \units{\dfrac{m}{s^2 g}}) m_h + (0.0010 \pm 0.0009 \units{\dfrac{m}{s^2}}) \tag{6}$$
       </p>
       
