--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -210,7 +210,7 @@
         $s_e$ came from the experimentally determined slope in equation 6.
         $s_t$ came from the theoretical slope suggested by equation 2, with uncertainty due to uncertainty in the system mass.
         $D$ is the difference between these two values, with uncertainty equal to the uncertainty of the two slopes added in quadrature.
-        Notice that the difference $D$ does not include the value zero.
+        Notice that the difference $D$ with uncertainty does not include the value zero.
       </p>
 
     </section>
