Sentence added to conclusion

--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -227,6 +227,7 @@
         The graph of acceleration versus hanging mass (Figure 2) turned out to be well described by a linear/proportional fit, which is consistent with the predictions.
         But, while the difference ($D$, see Table 2) between the theoretical and experimental slopes turned out to be quite low, its uncertainty range did not include zero.
         In other words, the theoretical and experimental slopes did not agree with each other at this level of precision. 
+        The experimental results are not consistent with Newton's second law.
         Thus, it is likely that factors initially assumed to be negligible were actually at play.
         One potential source of error comes from the assumption that the track was properly leveled before starting to gather data.
         When the experiment was carried out, the track was figured to be level just based on visual inspection.
