Typo in 'dependence' fixed

--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -61,7 +61,7 @@
         Mixing HTML tags with Markdown syntax in such a way felt very messy and hard to organize.
         It made me want to avoid inserting <code>&lt;script&gt;</code> tags or apply classes to elements.
         Using HTML makes such actions feel more natural.
-        In addition, using HTML at the outset removes the dependance on a Markdown renderer and its particular nuances.
+        In addition, using HTML at the outset removes the dependence on a Markdown renderer and its particular nuances.
       </p>
     </section>
     <section>
